[tool.poetry]
name = "phoenix-documentation"
version = "9999"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
ablog = "==0.10.25"
doc8 = "==0.11.1"
docutils = "==0.20.1"
fonttools = {version = "==4.33.3", extras = ["woff"]}
latex = "==0.7.0"
packaging = "==24.1"
readthedocs-sphinx-ext = "^2"
sphinx = "==7.3.7"
sphinx-rtd-theme = {git = "https://github.com/readthedocs/sphinx_rtd_theme.git", rev = "357e76dc42a89c1c387cafd8cb134378a57e4d6d"}
sphinx-hoverxref = "==1.0.1"
sphinx-notfound-page = "==1.0.2"
sphinx-tabs = "==3.4.5"
sphinx-version-warning = "==1.1.2"
sphinxcontrib-ghcontributors = "==0.2.3"
sphinxcontrib-htmlhelp = "==2.0.0"
sphinxcontrib-serializinghtml = "==1.1.10"
sphinxcontrib-svg2pdfconverter = "==1.2.0"
sphinxext-delta = "==0.2.0"
sphinxext-linkcheckdiff = "==0.1.0"
sphinxext-mimic = "==0.1.1"
sphinxext-opengraph = "==0.4.1"
sphinxext-presentations = "==0.2.2"
sphinxext-rediraffe = "==0.2.5"
sphinxext-remoteliteralinclude = "==0.3.0"
sphinxext-toptranslators = "==0.1.2"
urllib3 = ">=1.26.6, <2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"